# military-aircraft-detector

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.fastapi  Dockerfile.streamlit  Dockerfile.trainmodel  LICENSE  README.md  docker-compose.yml  docker-compose_app.yml  docker-compose_train_model.yml  pyproject.toml  requirements.txt  requirements_fastapi.txt  requirements_streamlit.txt
configs/: model.yaml
src/: __init__.py  app_dashboard.py  main.py
src/acnato_classifier/app/: main.py
src/acnato_classifier/app/api_models/: response_model.py
src/acnato_classifier/data/: data_utils.py
src/acnato_classifier/data/dataset/: military_aircraft.py
src/acnato_classifier/pipelines/: train.py
src/acnato_classifier/utils/: data_augmentations.py  utils.py
src/app/: app_dashboard.py  main.py  train_main.py
src/app/api_models/: api_model.py
src/app/api_routers/: cached_files.py  inference.py
src/app/data/: data_utils.py
src/app/data/dataset/: military_aircraft_data_module.py
src/app/frontend/: app_design.py
src/app/model/: faster_rcnn.py  model_utils.py
src/app/pipelines/: __init__.py  base.py  inference.py  preprocessing.py  train.py
src/app/settings/: general.py
src/app/utils/: cli.py  utils.py
src/data/: data_augmentations.py
src/data/dataset/: military_aircraft.py  military_aircraft_data_module.py
src/frontend/: app_design.py
src/model/: faster_rcnn.py
src/pipelines/: inference.py  train.py
src/settings/: general.py
src/utils/: utils.py
