[tool.poetry]
name = "acnato_classifier"
version = "0.1.0"
description = "Nato Aicraft classifier"
authors = ["Diogo Matias <diogo.pomatias@gmail.com>"]
readme = "README.md"
packages = [
    { include = "acnato_classifier", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
