[tool.poetry]
name = "acnato_classifier"
version = "0.1.0"
description = "Nato Aicraft classifier"
authors = ["Diogo Matias <diogo.pomatias@gmail.com>"]
readme = "README.md"
packages = [
    { include = "acnato_classifier", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.4"
Pillow = "^9.2.0"
python-multipart = "^0.0.5"
pre-commit = "^2.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"


[tool.poetry.group.api.dependencies]
fastapi = "^0.85.0"
uvicorn = "^0.18.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
